Fix scrollbar present on activecard on desktop

--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,8 @@ body {
 .activeCard {
   width: 90%;
   height: 95%;
-  
-  margin-top: 5%;
+  margin-top: 2.5vh;
+
   margin-left: auto;
   margin-right: auto;
 }
